# SokobanGame

./: .gitignore  CMakeLists.txt  CODE_REVIEW.md  HANDOFF.md  README.md  test-level.lvl
assets/: manifest.json  manifest.txt
assets/Kenney Game Assets All-in-1 3.5.0/: Overview.html  Readme.html  assets.json
assets/custom/: Rig_Medium_Push.glb
cmake/: AssetManifest.cmake  GeneratedAssetCatalog.hpp.in
levels/Deleted/level1/: screen0.scr
levels/Deleted/level1_deleted1/: screen0.scr
levels/level0/: screen0.scr  screen1.scr  screen2.scr
levels/level1/: screen0.scr  screen1.scr  screen2.scr  screen3.scr
levels/level2/: screen0.scr  screen1.scr  screen2.scr
levels/level3/: screen0.scr  screen1.scr
shaders/: fullscreen.vert.glsl  model.vert.glsl  model_shadow.vert.glsl  shadow.vert.glsl  ssao.frag.glsl  ssao_composite.frag.glsl  triangle.frag.glsl  triangle.vert.glsl  water.frag.glsl
src/: main.cpp
src/engine/: AnimationPreviewDebugUi.cpp  AnimationPreviewDebugUi.hpp  Application.cpp  Application.hpp  ApplicationDebugUi.cpp  ApplicationDebugUi.hpp  AssetManifest.cpp  AssetManifest.hpp  AssetManifestDebugUi.cpp  AssetManifestDebugUi.hpp  AssetManifestEditor.cpp  AssetManifestEditor.hpp  AsyncSaveStore.cpp  AsyncSaveStore.hpp  AtomicFile.cpp  AtomicFile.hpp  AudioSystem.cpp  AudioSystem.hpp  BoardLayout.cpp  BoardLayout.hpp  CampaignSession.cpp  CampaignSession.hpp  Config.hpp  ContentPipeline.cpp  ContentPipeline.hpp  DebugUi.cpp  DebugUi.hpp  Flow.hpp  GameplayLoop.cpp  GameplayLoop.hpp  GameplayPresentation.cpp  GameplayPresentation.hpp  GameplaySession.cpp  GameplaySession.hpp  Input.cpp  Input.hpp  InputBindings.cpp  InputBindings.hpp  InputRouter.cpp  InputRouter.hpp  (+45 more)
src/engine/render/: AnimationController.cpp  AnimationController.hpp  FrameDescriptorSync.hpp  FrameResourceTracker.cpp  FrameResourceTracker.hpp  GltfMesh.cpp  GltfMesh.hpp  ImageData.cpp  ImageData.hpp  IsoScenePreparer.cpp  IsoScenePreparer.hpp  RenderAssetCatalog.hpp  RenderAssetRequirements.cpp  RenderAssetRequirements.hpp  RenderResolution.cpp  RenderResolution.hpp  RenderTypes.hpp  RendererReconfiguration.cpp  RendererReconfiguration.hpp  SkinnedMeshUpdater.cpp  SkinnedMeshUpdater.hpp  VulkanDeviceContext.cpp  VulkanDeviceContext.hpp  VulkanDeviceSelection.cpp  VulkanDeviceSelection.hpp  VulkanModelResources.cpp  VulkanModelResources.hpp  VulkanPipelineFactory.cpp  VulkanPipelineFactory.hpp  VulkanRenderConstants.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanResourceUtils.cpp  VulkanResourceUtils.hpp  VulkanSceneDescriptors.cpp  VulkanSceneDescriptors.hpp  VulkanSceneRecorder.cpp  VulkanSceneRecorder.hpp  VulkanShadowPass.cpp  VulkanShadowPass.hpp  (+6 more)
src/engine/ui/: FontAtlas.cpp  FontAtlas.hpp  LevelCompleteOverlay.cpp  LevelCompleteOverlay.hpp  MenuKit.cpp  MenuKit.hpp  OptionsMenu.cpp  OptionsMenu.hpp  TitleScreen.cpp  TitleScreen.hpp  Ui.cpp  Ui.hpp  UiControls.cpp  UiControls.hpp  UiLayout.cpp  UiLayout.hpp
tests/: AnimationControllerTests.cpp  AssetManifestEditorTests.cpp  AssetManifestTests.cpp  AssetRequirementsTests.cpp  CampaignSessionTests.cpp  ContentPipelineTests.cpp  FrameDescriptorSyncTests.cpp  FrameResourceTrackerTests.cpp  GameplayLoopTests.cpp  GameplaySessionTests.cpp  ImageDataTests.cpp  InputRouterTests.cpp  InputTests.cpp  IsoScenePreparerTests.cpp  LevelCatalogTests.cpp  LevelEditorTests.cpp  LevelTests.cpp  LogTests.cpp  PlayerProfileTests.cpp  PresentationTests.cpp  RendererReconfigurationTests.cpp  RulesTests.cpp  SaveSlotManagerTests.cpp  SettingsCoordinatorTests.cpp  ShellFlowTests.cpp  TaskSystemTests.cpp  TitleScreenTests.cpp  UiTests.cpp  VulkanDeviceSelectionTests.cpp
tools/: ContentTool.cpp  make_drag_loops.py  make_push_animation.py
